--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+    </div>
+    <p style="display:none;" id="p5_loading"></p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
   </body>
 </html>
